Adjusted Endpoints to be more RESTful
