# app/routes.py
@@ -20,11 +20,11 @@ def hello():
     return "<h1>Welcome!</h1><p>Welcome to our API server, you can query courses and competencies here.</p>"
 
 
-@routes.route("/initialize", methods=["POST"])
+@routes.route("/competencies/initialize", methods=["POST"])
 def initialize():
     store = Store()
     store.initialize()
-    return "Database and Store have been initialized successfully!"
+    return "Database and Store have been initialized with Competencies successfully!"
 
 
 def _get_competency_extractor_from_string(name):
@@ -36,7 +36,7 @@ def _get_competency_extractor_from_string(name):
     return None
 
 
-@routes.route("/course", methods=["POST"])
+@routes.route("/courses", methods=["POST"])
 def create_course():
     extractor = request.args.get("extractor")
 
@@ -155,7 +155,7 @@ def retrieve_course():
     return jsonify([course.toJSON() for course in courses])
 
 
-@routes.route("/competency", methods=["GET"])
+@routes.route("/competencies", methods=["GET"])
 def retrieve_competency():
     course_id = request.args.get("courseId")
 
